RESOLVED FIXED54059
Crash when going back/forward when back/forward list is in a bad state.
https://bugs.webkit.org/show_bug.cgi?id=54059
Summary Crash when going back/forward when back/forward list is in a bad state.
Maciej Stachowiak
Reported 2011-02-08 21:18:20 PST
Crash when going back/forward when back/forward list is in a bad state.
Attachments
Patch (1.69 KB, patch)
2011-02-08 21:20 PST, Maciej Stachowiak
no flags
Patch (2.35 KB, patch)
2011-02-08 21:36 PST, Maciej Stachowiak
mrowe: review+
Maciej Stachowiak
Comment 1 2011-02-08 21:20:38 PST
Mark Rowe (bdash)
Comment 2 2011-02-08 21:26:11 PST
Comment on attachment 81742 [details] Patch Local variables for m_backForwardList->forwardItem() and m_backForwardList->backItem() could make this clearer since each of those is called four times within the function.
Maciej Stachowiak
Comment 3 2011-02-08 21:36:29 PST
Maciej Stachowiak
Comment 4 2011-02-08 21:40:20 PST
Note You need to log in before you can comment on or make changes to this bug.