2011-02-08  Maciej Stachowiak  <mjs@apple.com>

Reviewed by Mark Rowe.

        Crash when going back/forward when back/forward list is in a bad state.
        https://bugs.webkit.org/show_bug.cgi?id=54059
        <rdar://problem/8975244>

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::goForward): Add a null check.
        (WebKit::WebPageProxy::goBack): ditto


Canonical link: https://commits.webkit.org/68072@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78015 268f45cc-cd09-0410-ab3c-d52691b4dbfc